# LogicSim

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: enableWarnings.cmake  glad.cmake  glfw.cmake  glm.cmake  spdlog.cmake
gl/: CMakeLists.txt
gl/include/: CMakeLists.txt
gl/include/gl/: buffer.hpp  framebuffer.hpp  gl.hpp  id.hpp  shaders.hpp  texture.hpp  vao.hpp  window.hpp
gl/src/: CMakeLists.txt  buffer.cpp  shaders.cpp  vao.cpp  window.cpp
renderer/: CMakeLists.txt
renderer/include/: CMakeLists.txt
renderer/include/renderer/: camera.hpp
renderer/src/: CMakeLists.txt  camera.cpp
src/: CMakeLists.txt  drawing.hpp  flatland_rc.hpp  flipFlops.hpp  input.cpp  input.hpp  jfa.cpp  jfa.hpp  main.cpp  naive.hpp  triangle.hpp
src/shaders/: CMakeLists.txt  distance.slang  draw.slang  flatland_rc.slang  jumpflood.slang  naive.slang  toUv.slang
src/shaders/include/: uv.slang
